syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. ./recover.proto
option go_package = ".;pb";

message Status {
  int32 code = 1;
  string info = 2;
}

message ClientInfo{
  string jobId = 1;
  string role = 2;
}

message FaultRank {
  string rankId = 1;
  string faultType = 2;
}

message ProcessManageSignal {
  string uuid=1;
  string jobId = 2;
  string signalType = 3;
  repeated string actions = 4;
  repeated FaultRank faultRanks = 5;
  string changeStrategy = 6;
  int64 timeout = 7;
  repeated string nodeRankIds = 8;
  string extraParams = 9;
}

message StopCompleteRequest {
  string jobId = 1;
  Status status = 2;
  repeated FaultRank faultRanks = 3;
}

message RecoverStrategyRequest{
  string jobId = 1;
  repeated FaultRank faultRanks = 2;
  repeated string strategies = 3;
}

message RecoverStatusRequest{
  string jobId = 1;
  Status status = 2;
  string strategy = 3;
  repeated string isolateRankIds = 4;
}

message ProcessFaultRequest{
  string jobId = 1;
  repeated FaultRank faultRanks = 2;
}

message SwitchNicResponse{
  string jobID = 1;
  string msg = 2;
}

message SwitchNicRequest{
  string jobID = 1;
}

message SwitchNics {
  string jobID = 1;
  map<string, DeviceList> nicOps = 2;
}

message DeviceList {
  repeated  string dev = 1;
  repeated  bool op = 2;
}

message SwitchRankList {
  repeated  string rankID = 1;
  repeated  bool op = 2;
  string jobId = 3;
}

message SwitchResult {
  string jobId = 1;
  bool result = 2;
}

message StressOpList {
  repeated int64 ops = 1;
}

message StressTestParam {
  string jobID = 1;
  map<string, StressOpList> stressParam = 2;  //  stressParam: {NodeName: [ops]}
  repeated int64 allNodesOps = 3;
}

message StressTestRequest{
  string jobID = 1;
}

message StressTestResponse{
  string jobID = 1;
  string msg = 2;
}

message StressTestRankParams {
  map<string, StressOpList> stressParam = 1;  //  stressParam: {RankID: [ops]}
  string jobId = 2;
}

message StressTestResult {
  string jobId = 1;
  map<string, StressTestRankResult> stressResult = 2;  //  rankResult: {RankID: result}
}

message StressTestRankResult {
  map<string, StressTestOpResult> rankResult= 1;  //  opResult: {OpName: result}
}

message StressTestOpResult {
  string code = 1;
  string result = 2;
}

service Recover {
  rpc Init(ClientInfo) returns (Status) {}
  rpc Register(ClientInfo) returns (Status) {}
  rpc SubscribeProcessManageSignal(ClientInfo) returns (stream ProcessManageSignal){}
  rpc ReportStopComplete(StopCompleteRequest) returns (Status){}
  rpc ReportRecoverStrategy(RecoverStrategyRequest) returns (Status) {}
  rpc ReportRecoverStatus(RecoverStatusRequest) returns(Status) {}
  rpc ReportProcessFault(ProcessFaultRequest) returns (Status){}
  rpc SwitchNicTrack(SwitchNics) returns (Status) {}
  rpc SubscribeSwitchNicSignal(SwitchNicRequest) returns (stream SwitchNicResponse) {}
  rpc SubscribeNotifySwitch(ClientInfo) returns (stream SwitchRankList) {}
  rpc ReplySwitchNicResult(SwitchResult) returns (Status) {}
  rpc HealthCheck(ClientInfo) returns (Status) {}

  rpc StressTest(StressTestParam) returns (Status) {}
  rpc SubscribeStressTestResponse(StressTestRequest) returns (stream StressTestResponse) {}
  rpc SubscribeNotifyExecStressTest(ClientInfo) returns (stream StressTestRankParams) {}
  rpc ReplyStressTestResult(StressTestResult) returns (Status) {}
}